Search service test refactoring